adicionando projeto Mall-store

--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@
     </section>
 
     <section id="projects">
-      <div class="wrapper"></div>
+      <div class="wrapper">
+        
+      </div>
     </section>
 
     <section id="knowledge">
