add: adicionar conhecimento em tailwind

--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
                 apresentação dos elementos da página os estilizando.
               </p>
             </div>
+
             <div class="card">
               <img src="./assets/images/js.png" alt="Ícone do Javascript." />
 
@@ -250,6 +251,16 @@
                 comportamentos da página.
               </p>
             </div>
+
+            <div class="card">
+              <img src="./assets/images/icon-tailwind.png" alt="Ícone do tailwind." class="tailwind"/>
+
+              <h3>Tailwind</h3>
+              <p>
+                Tailwind é um framework CSS que permite há você criar layouts para suas aplicações web utilizando sua estrutura. Ou seja, uma ferramenta que fornece componentes para sua estilização.
+              </p>
+            </div>
+
             <div class="card">
               <img src="assets/images/icono-react.png" alt="Ícone do reactjs." />
 
@@ -258,6 +269,7 @@
                 O React é uma biblioteca front-end JavaScript de código aberto com foco em criar interfaces de usuário em páginas web.
               </p>
             </div>
+
           </div>
         </div>
       </div>
